# whole-slide-cnn

./: .gitattributes  .gitignore  README.md  pyproject.toml
data_configs/: test_adeno.csv  test_alldata.csv  test_refined.csv  test_small_lesion.csv  test_squamous.csv  test_tcga.csv  test_tcga_tissue.csv  train_adeno.csv  train_alldata.csv  train_eighth.csv  train_half.csv  train_quarter.csv  train_refined.csv  train_squamous.csv  val_adeno.csv  val_alldata.csv  val_dummy.csv  val_refined.csv  val_squamous.csv
data_configs/pure_tcga/: train_pure_tcga.csv  val_pure_tcga.csv
misc/: tcga_vahadane.pkl  tmuh_vahadane.pkl
tools/: calc_auc.R  compare_auc.R  draw_roc.py  gen_bootstrap_aucs.R  print_scores.py
train_configs/: config_mil_em_4x.yaml  config_mil_k1_10x.yaml  config_mil_k1_2x.yaml  config_mil_k1_4x.yaml  config_mil_k3_4x.yaml  config_mil_k5_4x.yaml  config_wholeslide_10x.yaml  config_wholeslide_1x.yaml  config_wholeslide_2x.yaml  config_wholeslide_4x.yaml  config_wholeslide_4x_adeno.yaml  config_wholeslide_4x_eighth.yaml  config_wholeslide_4x_gap.yaml  config_wholeslide_4x_half.yaml  config_wholeslide_4x_quarter.yaml  config_wholeslide_4x_resnet34.yaml  config_wholeslide_4x_squamous.yaml
train_configs/pure_tcga/: config_pure_tcga_wholeslide_4x.yaml
train_configs/throughput/: config_throughput_11000_r50_mil.yaml  config_throughput_11000_r50_wholeslide.yaml  config_throughput_21500_r50_mil.yaml  (+3 more)
whole_slide_cnn/: dataloader.py  dataset.py  huge_layer_wrapper.py  model.py  post_train.py  post_train_model.py  resnet.py  test.py  train.py  utils.py  vahadane.py
